# endstone-quick-shulkerbox

./: .gitignore  CMakeLists.txt  LICENSE  README.chs.md  README.md
.github/workflows/: nightly.yml  workflow.yml
include/: quick_shulkerbox_plugin.h
src/: quick_shulkerbox_plugin.cpp  version.h.in
